<resources>
    <string name="app_name">QQuadet</string>
    <string name="iWillBuy">사올래!</string>
    <string name="iWillEat">먹을래?</string>
    <string name="mainLogo">MainLogo</string>
    <string name="arriveTime">도착시간</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="endTime">신청마감시간</string>
    <string name="qquanum">꽈배기 갯수</string>
    <string name="sugar">SUGAR</string>
    <string name="nosugar">NO SUGAR</string>
    <string name="assign">신청</string>
    <string name="qquaBaek">꽈백</string>
    <string name="total">TOTAL</string>
    <string name="eatQb">꽈배기 먹장 ^_^</string>
    <string name="assignEat">먹을래 신청 페이지</string>
    <string name="assignBuy">사올래 신청 페이지</string>
    <string name="mypage">마이페이지</string>
    <string name="eat">먹을래</string>래
    <string name="buy">사올래</string>
</resources>