<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arriveTime"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="26dp"
        android:layout_marginTop="70dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="01"
            android:textSize="60sp"
            android:textColor="@color/orange"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=":"
            android:textSize="60sp"
            android:textColor="@color/orange"
            android:layout_marginStart="13dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="30"
            android:textSize="60sp"
            android:textColor="@color/orange"
            android:layout_marginStart="12dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pm"
            android:textSize="14sp"
            android:textColor="@color/orange"
            android:layout_marginStart="21dp"
            android:gravity="bottom"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nosugar"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="74dp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="1"
            android:textSize="60sp"
            android:textColor="@color/orange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qquaBaek"
            android:textSize="30sp"
            android:textColor="@color/orange"
            android:gravity="bottom"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="2"
            android:textSize="60sp"
            android:textColor="@color/orange"
            android:layout_marginStart="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qquaBaek"
            android:textSize="30sp"
            android:textColor="@color/orange"
            android:gravity="bottom"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="26dp"
        android:layout_marginTop="48dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="3"
            android:textSize="60sp"
            android:textColor="@color/orange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qquaBaek"
            android:textSize="30sp"
            android:textColor="@color/orange"
            android:gravity="bottom"/>
    </LinearLayout>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/qquadet_logo"
        android:contentDescription="@string/mainLogo"/>

</LinearLayout>