<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivMainMyPage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_my"
        android:layout_gravity="end"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="222dp"
        android:layout_height="275dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/mainLogo"
        android:src="@drawable/qquadet_logo" />

    <TextView
        android:id="@+id/mainBuy"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:text="@string/iWillBuy"
        android:textSize="53sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:background="@drawable/main_buy_btn"/>

    <TextView
        android:id="@+id/mainEat"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:text="@string/iWillEat"
        android:textSize="53sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:background="@drawable/main_eat_btn"/>

</LinearLayout>