<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_marginTop="93dp"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="135dp"
        android:text="@string/arriveTime"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/arrival_hour"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60dp"
            android:layout_marginLeft="60dp"
            android:text="00"
            android:textColor="#FFA451"
            android:background="@drawable/custom_button3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60dp"
            android:layout_marginLeft="20dp"
            android:text=":"
            android:textColor="#FFA451"
            />

        <TextView
            android:id="@+id/arrival_minute"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60dp"
            android:layout_marginLeft="20dp"
            android:text="00"
            android:textColor="#FFA451"
            android:background="@drawable/custom_button3"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="40dp"
            >

            <TextView
                android:id="@+id/arrival_minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/am"
                android:background="@drawable/custom_button1"
                />

            <TextView
                android:id="@+id/arrival_minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:text="@string/pm"
                android:background="@drawable/custom_button1"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/arrival_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginLeft="70dp"
            android:text="@string/hour"
            />

        <TextView
            android:id="@+id/arrival_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_marginLeft="95dp"
            android:text="@string/minute"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="135dp"
        android:text="@string/endTime"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/arrival_hour"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60sp"
            android:layout_marginLeft="60dp"
            android:text="00"
            android:textColor="#FFA451"
            android:background="@drawable/custom_button3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60sp"
            android:layout_marginLeft="20dp"
            android:text=":"
            android:textColor="#FFA451"
            />

        <TextView
            android:id="@+id/arrival_minute"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60sp"
            android:layout_marginLeft="20dp"
            android:text="00"
            android:textColor="#FFA451"
            android:background="@drawable/custom_button3"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="40dp"
            >

            <TextView
                android:id="@+id/arrival_minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/am"
                android:background="@drawable/custom_button1"
                />

            <TextView
                android:id="@+id/arrival_minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:text="@string/pm"
                android:background="@drawable/custom_button1"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/arrival_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginLeft="70dp"
            android:text="@string/hour"
            />

        <TextView
            android:id="@+id/arrival_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_marginLeft="95dp"
            android:text="@string/minute"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="135dp"
        android:text="@string/qquanum"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="-"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/tvMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="+"
            android:textColor="#FFFFFF"/>

</LinearLayout>