<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="63dp"
        android:text="@string/arriveTime"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/arrivalHour"
            android:inputType="number"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60dp"
            android:layout_marginLeft="60dp"
            android:hint="00"
            android:textColor="#FFA451"
            android:background="@drawable/custom_button3"
            android:imeOptions="actionDone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60dp"
            android:layout_marginLeft="20dp"
            android:text=":"
            android:textColor="#FFA451"
            />

        <EditText
            android:id="@+id/arrivalMinute"
            android:inputType="number"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60dp"
            android:layout_marginLeft="20dp"
            android:hint="00"
            android:textColor="#FFA451"
            android:background="@drawable/custom_button3"
            />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            >

            <ToggleButton
                android:id="@+id/arriveAM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textOn="@string/am"
                android:textOff="@string/am"
                android:checked="true"
                android:background="@drawable/btn_time_selector"
                android:textColor="@color/btn_time_on"
                />

            <ToggleButton
                android:id="@+id/arrivePM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textOn="@string/pm"
                android:textOff="@string/pm"
                android:background="@drawable/btn_time_selector"
                android:textColor="@color/btn_time_on"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginLeft="70dp"
            android:text="@string/hour"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_marginLeft="95dp"
            android:text="@string/minute"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:text="@string/endTime"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/endHour"
            android:inputType="number"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60sp"
            android:layout_marginLeft="60dp"
            android:hint="00"
            android:textColor="#FFA451"
            android:background="@drawable/custom_button3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60sp"
            android:layout_marginLeft="20dp"
            android:text=":"
            android:textColor="#FFA451"
            />

        <EditText
            android:id="@+id/endMinute"
            android:inputType="number"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60sp"
            android:layout_marginLeft="20dp"
            android:hint="00"
            android:textColor="#FFA451"
            android:background="@drawable/custom_button3" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            >

            <ToggleButton
                android:id="@+id/endAM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textOn="@string/am"
                android:textOff="@string/am"
                android:checked="true"
                android:background="@drawable/btn_time_selector"
                android:textColor="@color/btn_time_on"
                />

            <ToggleButton
                android:id="@+id/endPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textOn="@string/pm"
                android:textOff="@string/pm"
                android:background="@drawable/btn_time_selector"
                android:textColor="@color/btn_time_on"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginLeft="70dp"
            android:text="@string/hour"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_marginLeft="95dp"
            android:text="@string/minute"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:text="@string/qquanum"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFirstMinus"
            android:layout_width="53dp"
            android:layout_height="42dp"
            android:layout_marginStart="47dp"
            android:background="@drawable/up_down_btn"
            android:text="-"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvSecondText2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="0"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnFirstPlus"
            android:layout_width="53dp"
            android:layout_height="42dp"
            android:layout_marginEnd="47dp"
            android:background="@drawable/up_down_btn"
            android:text="+"
            android:textSize="30sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAssign2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/up_down_btn"
        android:text="신청"
        android:textSize="35sp"
        android:textColor="@color/white"/>

</LinearLayout>